--- a/html/index.html
+++ b/html/index.html
@@ -20,19 +20,52 @@
     <div class="pagina">
         <header>
             <h1>Crie e compartilhe seu evento.</h1>
-    
+
             <p>O primeiro , é preencher esse formulário de inscrição.</p>
         </header>
-    
+
         <form>
             <fieldset>
-                <legend>Informações do Evento</legend>
+                <div class="fieldset-wrapper">
+                    <legend>Informações do Evento</legend>
+                    <div class="input-wrapper">
+                        <label for="titulo-evento">
+                            Título do evento <span>(mínimo 8 caracteres)</span>
+                        </label>
+                        <input type="text" id="titulo-evento">
+                    </div>
 
-                <div class="input-wrapper">
-                    <label for="titulo-evento">
-                        Título do evento <span>(mínimo 8 caracteres)</span>
-                    </label>
-                    <input type="text" id="titulo-evento">
+                    <div class="input-wrapper">
+                        <label for="link">
+                            Link do evento <span>(comece com http://)</span>
+                        </label>
+                        <input type="text" id="link-evento">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="whatsapp-evento">
+                            WhatsApp para contato <span>(somente números)</span>
+                        </label>
+                        <input type="number" id="whatsapp-evento">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="info-evento">
+                            Informações extras</span>
+                        </label>
+                        <textarea id="info-evento"></textarea>
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="categoria-evento">
+                            Categoria
+                        </label>
+                        <select id="categoria-evento">
+                            <option value="LiveStream">Ao vivo</option>
+                            <option value="Video">Vídeo</option>
+                            <option value="Podcast">Podcast</option>
+                        </select>
+                    </div>
                 </div>
             </fieldset>
         </form>
