Campos de privacidade, data e hora criados e estilizados

--- a/html/index.html
+++ b/html/index.html
@@ -68,6 +68,61 @@
                     </div>
                 </div>
             </fieldset>
+
+            <fieldset>
+                <div class="fieldset-wrapper">
+                    <legend>Privacidade</legend>
+                    <div class="input-wrapper">
+                        <label for="email-evento">
+                            E-mail do administrador <span>(digite um email válido)</span>
+                        </label>
+                        <input type="email" id="email-evento">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="senha-evento">
+                            Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span>
+                        </label>
+                        <input type="password" id="senha-evento">
+                    </div>
+
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="checkbox-evento">
+                        <label for="checkbox-evento">
+                            Evento privado
+                        </label>
+                    </div>
+                </div>
+            </fieldset>
+
+            <fieldset>
+                <div class="fieldset-wrapper">
+                    <legend>Dia e Hora</legend>
+
+                    <div class="horizontal">
+                        <div class="input-wrapper">
+                            <label for="data-evento">
+                                Data
+                            </label>
+                            <input type="date" id="data-evento">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="inicio-evento">
+                                Das
+                            </label>
+                            <input type="time" id="inicio-evento">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="fim-evento">
+                                Até
+                            </label>
+                            <input type="time" id="fim-evento">
+                        </div>
+                    </div>
+                </div>
+            </fieldset>
         </form>
     </div>
 </body>
