--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
             <p>O primeiro , é preencher esse formulário de inscrição.</p>
         </header>
 
-        <form>
+        <form id="formulario">
             <fieldset>
                 <div class="fieldset-wrapper">
                     <legend>Informações do Evento</legend>
@@ -32,14 +32,14 @@
                         <label for="titulo-evento">
                             Título do evento <span>(mínimo 8 caracteres)</span>
                         </label>
-                        <input type="text" id="titulo-evento">
+                        <input type="text" id="titulo-evento" required minlength="8">
                     </div>
 
                     <div class="input-wrapper">
                         <label for="link">
                             Link do evento <span>(comece com http://)</span>
                         </label>
-                        <input type="text" id="link-evento">
+                        <input type="text" id="link-evento" required>
                     </div>
 
                     <div class="input-wrapper">
@@ -76,14 +76,14 @@
                         <label for="email-evento">
                             E-mail do administrador <span>(digite um email válido)</span>
                         </label>
-                        <input type="email" id="email-evento">
+                        <input type="email" id="email-evento" required>
                     </div>
 
                     <div class="input-wrapper">
                         <label for="senha-evento">
                             Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span>
                         </label>
-                        <input type="password" id="senha-evento">
+                        <input type="password" id="senha-evento" required minlength="8">
                     </div>
 
                     <div class="checkbox-wrapper">
@@ -104,26 +104,30 @@
                             <label for="data-evento">
                                 Data
                             </label>
-                            <input type="date" id="data-evento">
+                            <input type="date" id="data-evento" required>
                         </div>
 
                         <div class="input-wrapper">
                             <label for="inicio-evento">
                                 Das
                             </label>
-                            <input type="time" id="inicio-evento">
+                            <input type="time" id="inicio-evento" required>
                         </div>
 
                         <div class="input-wrapper">
                             <label for="fim-evento">
                                 Até
                             </label>
-                            <input type="time" id="fim-evento">
+                            <input type="time" id="fim-evento" required>
                         </div>
                     </div>
                 </div>
             </fieldset>
+
         </form>
+        <footer class="buttons">
+            <input class="button" type="submit" form="formulario" value="Salvar evento">
+        </footer>
     </div>
 </body>
 
